tests/valid/implicit_casts.ar
let CONST_I8: i8 = 1;
let CONST_I16: i16 = 1;
let CONST_I32: i32 = 1;
let CONST_I64: i64 = 1;
let CONST_U8: u8 = 1;
let CONST_U16: u16 = 1;
let CONST_U32: u32 = 1;
let CONST_U64: u64 = 1;

fn main() {
    {
        let a = 1;
        let b: i8 = 1;
        let c: i16 = 1;
        let d: i32 = 1;
        let e: i64 = 1;
    }

    {
        let a: i8 = 1;
        let b: i8 = a;
        let c: i16 = a;
        let d: i32 = a;
        let e: i64 = a;
    }
    
    {
        let a = 1;
        let b: u8 = 1;
        let c: u16 = 1;
        let d: u32 = 1;
        let e: u64 = 1;
    }

    {
        let a: u8 = 1;
        let b: u8 = a;
        let c: u16 = a;
        let d: u32 = a;
        let e: u64 = a;
    }

    {
        let mut a: i64 = 1;
        a = CONST_I8;
        a = CONST_I16;
        a = CONST_I32;
        a = CONST_I64;
    }
    
    {
        let mut a: u64 = 1;
        a = CONST_U8;
        a = CONST_U16;
        a = CONST_U32;
        a = CONST_U64;
    }
}
